--- a/admin-pannel/package.json
+++ b/admin-pannel/package.json
@@ -35,7 +35,9 @@
     "react": "^18.3.1",
     "react-country-state-city": "^1.1.3",
     "react-country-state-dropdown": "^1.1.1",
+    "react-crud-icons": "^1.2.3",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "redux": "5.0.1",
