--- a/admin-pannel/package.json
+++ b/admin-pannel/package.json
@@ -27,10 +27,11 @@
     "@coreui/react-chartjs": "^3.0.0",
     "@coreui/utils": "^2.0.2",
     "@popperjs/core": "^2.11.8",
-    "axios": "^1.7.4",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.3",
     "classnames": "^2.5.1",
     "core-js": "^3.37.1",
+    "create-react-app": "^5.0.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-country-state-city": "^1.1.3",
