--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "mailtrap": "^3.4.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.2",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
     "sequelize": "^6.37.3",
