--- a/admin-pannel/package.json
+++ b/admin-pannel/package.json
@@ -33,6 +33,8 @@
     "core-js": "^3.37.1",
     "create-react-app": "^5.0.1",
     "dotenv": "^16.4.5",
+    "jAlert": "^4.9.1",
+    "jquery": "^3.7.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-country-state-city": "^1.1.3",
@@ -42,6 +44,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
+    "react-table": "^7.8.0",
     "redux": "5.0.1",
     "simplebar-react": "^3.2.5"
   },
