--- a/admin-pannel/package.json
+++ b/admin-pannel/package.json
@@ -46,7 +46,8 @@
     "react-router-dom": "^6.26.1",
     "react-table": "^7.8.0",
     "redux": "5.0.1",
-    "simplebar-react": "^3.2.5"
+    "simplebar-react": "^3.2.5",
+    "sweetalert2": "^11.14.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
