--- a/admin-pannel/package.json
+++ b/admin-pannel/package.json
@@ -45,6 +45,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
     "react-table": "^7.8.0",
+    "react-tooltip": "^5.28.0",
     "redux": "5.0.1",
     "simplebar-react": "^3.2.5",
     "sweetalert2": "^11.14.0"
